# ece117-unpredictables

./: .gitmodules  README.md
codeql/: find-random.ql
poc/crack-js-prng/: Notes.md  cache_behavior_test.py  data.py  example_test.py  main.py  random_crack_api.py  response.txt
poc/exploit-with-spamming/: .gitignore  attack.sh  exploit.py  random_crack_api.py  single-packet.py  spammer.sh
poc/semgrep-demo/: README.txt  command.txt  rules.yaml  test.js
poc/single-packet-attack/: .gitignore  attack.py  deno.json  derp  main.ts  pyproject.toml  single_packet_script.js
poc/single-packet-attack/static/: index.html  script.js  styles.css
poc/unified-exploit/: .gitignore  attack.sh  exploit.py  random_crack_api.py  single-packet.py  spammer.sh
rules/: rules.keep  rules.yaml  rules_general.yaml
rules/codeql/: codeql-pack.yml  find-random.ql
